adjusted home_box style to prevent detailed views from overlapping when their size is increased

--- a/docs/themes/default/styles.css
+++ b/docs/themes/default/styles.css
@@ -1834,8 +1834,8 @@ a.tooltip{
 
 div.home_box {
 	width: 25em;
-	height: 130px;	
-	margin-top: sem;
+	height: 10em;	
+	margin-top: 1em;
 	padding: 3px;
 	padding-bottom: .4em;
 	float: left;
